--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -20,8 +20,8 @@
             <li class="nav-item"> <a href="#" class="nav-link">Contact Us</a></li>
           </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="#" data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
-            <li class="nav-item"><a href="#" class="navbar-btn btn btn-primary">Get Started</a></li>
+            <li [routerLink]="['/login']"   class="nav-item"><a  data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
+            <li [routerLink]="['/signup']"  class="nav-item"><a  class="navbar-btn btn btn-primary">Get Started</a></li>
           </ul>
         </div>
       </div>
