--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+	<!-- Signin Start -->
+	<div class="sign_in_up_bg">
+		<div class="container">
+			<div class="row justify-content-lg-center justify-content-md-center">
+				<div class="col-lg-12">
+					<div class="main_logo25" id="logo">
+						<a href="index.html"><img src="images/logo.png" alt=""></a>
+						<a href="index.html"><img class="logo-inverse" src="images/ct_logo.svg" alt=""></a>
+					</div>
+				</div>
+			
+				<div class="col-lg-6 col-md-8">
+					<div class="sign_form">
+						<h2>Welcome Back</h2>
+						<p>Log In to Your Account</p>
+						<form>
+							<div class="ui search focus mt-15">
+								<div class="ui left icon input swdh95">
+									<input class="prompt srch_explore" type="email" name="emailaddress" value="" id="id_email" required="" maxlength="64" placeholder="Email or phone">															
+									<i class="uil uil-envelope icon icon2"></i>
+								</div>
+							</div>
+							<div class="ui search focus mt-15">
+								<div class="ui left icon input swdh95">
+									<input class="prompt srch_explore" type="password" name="password" value="" id="id_password" required="" maxlength="64" placeholder="Password">
+									<i class="uil uil-key-skeleton-alt icon icon2"></i>
+								</div>
+							</div>
+							<button class="login-btn" type="submit">Sign In</button>
+						</form>
+						<p class="sgntrm145">Or <a href="forgot_password.html">Forgot Password</a>.</p>
+						<p class="mb-0 mt-30 hvsng145">Don't have an account? <a href="sign_up.html">Sign Up</a></p>
+					</div>
+					<div class="sign_footer"><img src="images/sign_logo.png" alt="">© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</div>
+				</div>				
+			</div>				
+		</div>				
+	</div>
+	<!-- Signin End -->	
