--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -2,7 +2,7 @@
  <header class="header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img src="assets/img/logo.jpeg" alt="..." class="img-fluid"></a>
+        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
         <!-- Navbar toggler button-->
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right">Menu<i class="icon ion-md-list ml-2"></i></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
@@ -48,7 +48,7 @@
           <div class="col-lg-6 d-none d-lg-block">
             <div class="wrapper mx-auto">
               
-                <div class="img"><img src="assets/img/Image2.png" alt="..." class="img-fluid"></div>
+                <div class="img"><img src="assets/images/Image2.png" alt="..." class="img-fluid"></div>
               
             </div>
           </div>
