--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<router-outlet ><router-outlet>
-  <ngx-spinner bdColor= "rgba(0, 0, 0, 1)" type="square-jelly-box"></ngx-spinner>
+<router-outlet></router-outlet>
+<ngx-spinner bdColor= "rgba(0, 0, 0, 1)" type="square-jelly-box"></ngx-spinner>
