--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -1,17 +1,16 @@
-<app-header></app-header>
 <!-- Left Sidebar Start -->
 <nav class="vertical_nav">
     <div class="left_section menu_left" id="js-menu" >
         <div class="left_section">
             <ul>
                 <li class="menu--item">
-                    <a href="instructor_dashboard.html" class="menu--link" title="Dashboard">
+                    <a [routerLink]="['./dashboard']" routerLinkActive="active"  class="menu--link" title="Dashboard">
                         <i class="uil uil-apps menu--icon"></i>
                         <span class="menu--label">Dashboard</span>
                     </a>
                 </li>
                 <li class="menu--item">
-                    <a href="instructor_courses.html" class="menu--link" title="Courses">
+                    <a [routerLink]="['courses']" routerLinkActive="active"  class="menu--link" title="Courses">
                         <i class='uil uil-book-alt menu--icon'></i>
                         <span class="menu--label">Courses</span>
                     </a>
@@ -23,9 +22,9 @@
                     </a>
                 </li>
                 <li class="menu--item">
-                    <a href="create_new_course.html" class="menu--link active" title="Create Course">
+                    <a [routerLink]="['create']" routerLinkActive="active"  class="menu--link" title="Create Course">
                         <i class='uil uil-plus-circle menu--icon'></i>
-                        <span class="menu--label">Create Course</span>
+                        <span class="menu--label">Create Courses</span>
                     </a>
                 </li>
                 <li class="menu--item">
