--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -4,13 +4,13 @@
         <div class="left_section">
             <ul>
                 <li class="menu--item">
-                    <a [routerLink]="['./dashboard']" routerLinkActive="active"  class="menu--link" title="Dashboard">
+                    <a [routerLink]="['./dashboard']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Dashboard">
                         <i class="uil uil-apps menu--icon"></i>
                         <span class="menu--label">Dashboard</span>
                     </a>
                 </li>
                 <li class="menu--item">
-                    <a [routerLink]="['courses']" routerLinkActive="active"  class="menu--link" title="Courses">
+                    <a [routerLink]="['courses']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Courses">
                         <i class='uil uil-book-alt menu--icon'></i>
                         <span class="menu--label">Courses</span>
                     </a>
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li class="menu--item">
-                    <a [routerLink]="['create']" routerLinkActive="active"  class="menu--link" title="Create Course">
+                    <a [routerLink]="['create']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
                         <i class='uil uil-plus-circle menu--icon'></i>
                         <span class="menu--label">Create Courses</span>
                     </a>
