--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 a:hover{
     cursor: pointer;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
