--- a/src/app/pages/instructor/components/header/header.component.html
+++ b/src/app/pages/instructor/components/header/header.component.html
@@ -8,8 +8,8 @@
         <span class="collapse_menu--label"></span>
     </button>
     <div class="main_logo" id="logo">
-        <a href="index.html"><img src="images/logo-inner.png" alt=""></a>
-        <a href="index.html"><img class="logo-inverse" src="images/logo-inner.png" alt=""></a>
+        <a href="index.html"><img src="assets/images/logo-inner.png" alt=""></a>
+        <a href="index.html"><img class="logo-inverse" src="assets/images/logo-inner.png" alt=""></a>
         <span>Smart Academy</span>
     </div>
     <div class="search120">
@@ -23,14 +23,14 @@
     <div class="header_right">
         <ul>
             <li>
-                <a href="create_new_course.html" class="upload_btn">Create New Course</a>
+                <a href="create_new_course.html" class="upload_btn" style="color: white;">Create New Course</a>
             </li>
             <li class="ui dropdown">
                 <a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span class="noti_count">3</span></a>
                 <div class="menu dropdown_ms">
                     <a href="#" class="channel_my item">
                         <div class="profile_link">
-                            <img src="images/left-imgs/img-6.jpg" alt="">
+                            <img src="assets/images/left-imgs/img-6.jpg" alt="">
                             <div class="pd_content">
                                 <h6>Zoena Singh</h6>
                                 <p>Hi! Sir, How are you. I ask you one thing please explain it this video price.</p>
@@ -40,7 +40,7 @@
                     </a>
                     <a href="#" class="channel_my item">
                         <div class="profile_link">
-                            <img src="images/left-imgs/img-5.jpg" alt="">
+                            <img src="assets/images/left-imgs/img-5.jpg" alt="">
                             <div class="pd_content">
                                 <h6>Joy Dua</h6>
                                 <p>Hello, I paid you video tutorial but did not play error 404.</p>
@@ -50,7 +50,7 @@
                     </a>
                     <a href="#" class="channel_my item">
                         <div class="profile_link">
-                            <img src="images/left-imgs/img-8.jpg" alt="">
+                            <img src="assets/images/left-imgs/img-8.jpg" alt="">
                             <div class="pd_content">
                                 <h6>Jass</h6>
                                 <p>Thanks Sir, Such a nice video.</p>
@@ -66,7 +66,7 @@
                 <div class="menu dropdown_mn">
                     <a href="#" class="channel_my item">
                         <div class="profile_link">
-                            <img src="images/left-imgs/img-1.jpg" alt="">
+                            <img src="assets/images/left-imgs/img-1.jpg" alt="">
                             <div class="pd_content">
                                 <h6>Rock William</h6>
                                 <p>Like Your Comment On Video <strong>How to create sidebar menu</strong>.</p>
@@ -76,7 +76,7 @@
                     </a>
                     <a href="#" class="channel_my item">
                         <div class="profile_link">
-                            <img src="images/left-imgs/img-2.jpg" alt="">
+                            <img src="assets/images/left-imgs/img-2.jpg" alt="">
                             <div class="pd_content">
                                 <h6>Jassica Smith</h6>
                                 <p>Added New Review In Video <strong>Full Stack PHP Developer</strong>.</p>
@@ -86,7 +86,7 @@
                     </a>
                     <a href="#" class="channel_my item">
                         <div class="profile_link">
-                            <img src="images/left-imgs/img-9.jpg" alt="">
+                            <img src="assets/images/left-imgs/img-9.jpg" alt="">
                             <div class="pd_content">
                                 <p> Your Membership Approved <strong>Upload Video</strong>.</p>
                                 <span class="nm_time">20 min ago</span>
@@ -98,12 +98,12 @@
             </li>
             <li class="ui dropdown">
                 <a href="#" class="opts_account">
-                    <img src="images/hd_dp.jpg" alt="">
+                    <img src="assets/images/hd_dp.jpg" alt="">
                 </a>
                 <div class="menu dropdown_account">
                     <div class="channel_my">
                         <div class="profile_link">
-                            <img src="images/hd_dp.jpg" alt="">
+                            <img src="assets/images/hd_dp.jpg" alt="">
                             <div class="pd_content">
                                 <div class="rhte85">
                                     <h6>Joginder Singh</h6>
