--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,16 +1,21 @@
- <!-- navbar-->
- <header class="header">
+<!-- navbar-->
+<div class="home">
+  <header class="header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
+        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img
+            src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
         <!-- Navbar toggler button-->
-        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right">Menu<i class="icon ion-md-list ml-2"></i></button>
+        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+          class="navbar-toggler navbar-toggler-right">Menu<i class="icon ion-md-list ml-2"></i></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav mx-auto ml-auto">
-                <!-- Link-->
-                <li class="nav-item"> <a href="schedule.html" class="nav-link">About Us</a></li>
-                
-            <li class="nav-item dropdown"><a id="pages" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">departments</a>
+            <!-- Link-->
+            <li class="nav-item"> <a href="schedule.html" class="nav-link">About Us</a></li>
+
+            <li class="nav-item dropdown"><a id="pages" href="#" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false" class="nav-link dropdown-toggle">departments</a>
               <div class="dropdown-menu">
                 <a href="#" class="dropdown-item">arabic</a>
                 <a href="#" class="dropdown-item">English</a>
@@ -20,14 +25,15 @@
             <li class="nav-item"> <a href="#" class="nav-link">Contact Us</a></li>
           </ul>
           <ul class="navbar-nav">
-            <li [routerLink]="['/login']"   class="nav-item"><a  data-toggle="modal" data-target="#login" class="nav-link font-weight-bold mr-3">Login</a></li>
-            <li [routerLink]="['/signup']"  class="nav-item"><a  class="navbar-btn btn btn-primary">Get Started</a></li>
+            <li [routerLink]="['/login']" class="nav-item"><a data-toggle="modal" data-target="#login"
+                class="nav-link font-weight-bold mr-3">Login</a></li>
+            <li [routerLink]="['/signup']" class="nav-item"><a class="navbar-btn btn btn-primary">Get Started</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  
+
   <div class="page-holder">
     <!-- intro Section-->
     <section class="hero shape-1">
@@ -36,7 +42,8 @@
           <div class="col-lg-6">
             <h1 class="hero-heading">Explore our schools to find your perfect course
             </h1>
-            <p class="lead mt-5 font-weight-light">Match your goals to our classes, explore your options, and map out your path to success.</p>
+            <p class="lead mt-5 font-weight-light">Match your goals to our classes, explore your options, and map out
+              your path to success.</p>
             <!-- Subscription form-->
             <form action="#" class="subscription-form mt-5">
               <div class="form-group">
@@ -47,26 +54,31 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <div class="wrapper mx-auto">
-              
-                <div class="img"><img src="assets/images/Image2.png" alt="..." class="img-fluid"></div>
-              
+
+              <div class="img"><img src="assets/images/Image2.png" alt="..." class="img-fluid"></div>
+
             </div>
           </div>
         </div>
       </div>
     </section>
   </div>
-  <footer class="footer">
+  <footer class="landing-footer">
     <div class="container text-center">
       <!-- Copyrights-->
       <div class="copyrights">
         <!-- Social menu-->
         <ul class="social list-inline-item">
-          <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i class="icon ion-logo-twitter"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i class="icon ion-logo-facebook"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i class="icon ion-logo-youtube"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i
+                class="icon ion-logo-twitter"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i
+                class="icon ion-logo-facebook"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i
+                class="icon ion-logo-youtube"></i></a></li>
         </ul>
-        <p class="copyrights-text mb-0">Copyright &copy; 2020 All rights reserved to <a href="#" target="_blank" class="copyrights-link">smart Academy</a></p>
+        <p class="copyrights-text mb-0">Copyright &copy; 2020 All rights reserved to <a href="#" target="_blank"
+            class="copyrights-link">smart Academy</a></p>
       </div>
     </div>
   </footer>
+</div>
