--- a/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
+++ b/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 		</div>
-		<footer class="footer mt-40">
+		<!-- <footer class="footer mt-40">
 			<div class="container-fluid">
 				<div class="row">					
 					<div class="col-lg-12">
@@ -133,7 +133,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 	</div>
 	<!-- Body End -->
 
