--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -73,7 +73,7 @@
             
         </div>
     </div>
-    <footer class="footer mt-40">
+    <!-- <footer class="footer mt-40">
         <div class="container-fluid">
             <div class="row">					
                 <div class="col-lg-12">
@@ -110,6 +110,6 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </div>
 <!-- Body End -->
