--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -26,7 +26,7 @@
           </ul>
           <ul class="navbar-nav">
             <li [routerLink]="['/login']" class="nav-item"><a data-toggle="modal" data-target="#login"
-                class="nav-link font-weight-bold mr-3">Login</a></li>
+                class="nav-link font-weight-bold mr-3">{{'Login' | translate}}</a></li>
             <li [routerLink]="['/signup']" class="nav-item"><a class="navbar-btn btn btn-primary">Get Started</a></li>
           </ul>
         </div>
