--- a/src/app/pages/instructor/create-course/create-course.component.html
+++ b/src/app/pages/instructor/create-course/create-course.component.html
@@ -5,7 +5,8 @@
       </button> -->
         <mat-horizontal-stepper [linear]="isLinear" #stepper>
             <mat-step [stepControl]="firstFormGroup">
-                <ng-template matStepLabel>General Information</ng-template>
+                <!-- {{'instructor.createCourse.step1title' | translate }} -->
+                <ng-template matStepLabel >{{'General Information' | translate}}</ng-template>
                 <form [formGroup]="firstFormGroup">
                     <div class="step-tab-panel step-tab-info active" id="tab_step1">
                         <div class="tab-from-content">
@@ -38,7 +39,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <div class="course_des_textarea mt-30 lbel25">
-                                                <label>Course Description*</label>
+                                                <label translate>{{'Course Description*' | translate}}</label>
                                                 <div class="course_des_bg">
                                                     <ul class="course_des_ttle">
                                                         <li><a href="#"><i class="uil uil-bold"></i></a></li>
