create course UI update

--- a/src/app/pages/instructor/components/header/header.component.html
+++ b/src/app/pages/instructor/components/header/header.component.html
@@ -23,7 +23,7 @@
     <div class="header_right">
         <ul>
             <li>
-                <a href="create_new_course.html" class="upload_btn" style="color: white;">Create New Course</a>
+                <a [routerLink]="['create']" class="upload_btn" style="color: white;">Create New Course</a>
             </li>
             <li class="ui dropdown">
                 <a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span class="noti_count">3</span></a>
