--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15880,11 +15880,43 @@ table .table-img {
 	width: 130px;
     border-radius: 10px;
 }
-.close {
-	margin: ;
-	
-}
+
 .rtl .close {
 	float: left;
 	
+}
+.btn-link {
+	color: #c8302f;
+}
+.btn-link:hover {
+	color: #333;
+}
+select {
+	border: 1px solid #e5e5e5 !important;
+    border-radius: 500rem !important;
+    box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.1) !important;
+    min-width: 100% !important;
+    padding: .78571429em 2.1em 0.785714em 2em !important;
+    cursor: pointer;
+    word-wrap: break-word;
+    line-height: 1em;
+    white-space: normal;
+    outline: 0;
+    -webkit-transform: rotateZ(0);
+    transform: rotateZ(0);
+    min-width: 14em;
+    min-height: 2.71428571em;
+    background: #fff;
+    display: inline-block;
+    padding: .78571429em 2.1em .78571429em 1em;
+    color: rgba(0,0,0,.87);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid rgba(34,36,38,.15);
+    border-radius: .28571429rem;
+    -webkit-transition: width .1s ease,-webkit-box-shadow .1s ease;
+    transition: width .1s ease,-webkit-box-shadow .1s ease;
+    transition: box-shadow .1s ease,width .1s ease;
+    transition: box-shadow .1s ease,width .1s ease,-webkit-box-shadow .1s ease;
+    color: #e5e5e5;
 }
