mod create course, add chapter, add lecture pages

--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -16,17 +16,36 @@
                     </a>
                 </li>
                 <li class="menu--item">
+                    <a [routerLink]="['create/course']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
+                        <i class='uil uil-plus-circle menu--icon'></i>
+                        <span class="menu--label">Create Courses</span>
+                        
+                    </a>
+                </li>
+                <li class="menu--item">
+                    <a [routerLink]="['create/chapter']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
+                        <i class='uil uil-plus-circle menu--icon'></i>
+                        <span class="menu--label">Add Chapter</span>
+                        
+                    </a>
+                </li>
+                <li class="menu--item">
+                    <a [routerLink]="['create/lecture']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
+                        <i class='uil uil-plus-circle menu--icon'></i>
+                        <span class="menu--label">Add lectures</span>
+                        
+                    </a>
+                </li>
+                
+                <!-- <li class="menu--item">
                     <a href="instructor_analyics.html" class="menu--link" title="Analyics">
                         <i class='uil uil-analysis menu--icon'></i>
                         <span class="menu--label">Analyics</span>
                     </a>
                 </li>
-                <li class="menu--item">
-                    <a [routerLink]="['create']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
-                        <i class='uil uil-plus-circle menu--icon'></i>
-                        <span class="menu--label">Create Courses</span>
-                    </a>
-                </li>
+               
+              
+                
                 <li class="menu--item">
                     <a href="instructor_messages.html" class="menu--link" title="Messages">
                         <i class='uil uil-comments menu--icon'></i>
@@ -74,10 +93,10 @@
                       <i class='uil uil-check-circle menu--icon'></i>
                       <span class="menu--label">Verification</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
-        <div class="left_section pt-2">
+        <!-- <div class="left_section pt-2">
             <ul>
                 <li class="menu--item">
                     <a href="setting.html" class="menu--link" title="Setting">
@@ -92,7 +111,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </nav>
 <!-- Left Sidebar End -->
