--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -40,7 +40,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <h1 class="hero-heading">Explore our schools to find your perfect course
+            <h1 class="hero-heading">{{'Explore our schools to find your perfect course' | translate}}
             </h1>
             <p class="lead mt-5 font-weight-light">Match your goals to our classes, explore your options, and map out
               your path to success.</p>
