route to user dashboard after login or isloggedin

--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -10,7 +10,7 @@
                     </a>
                 </li>
                 <li class="menu--item">
-                    <a [routerLink]="['courses']" class="menu--link" title="Dashboard">
+                    <a [routerLink]="['courses']" routerLinkActive="active"  class="menu--link" title="Dashboard">
                         <i class="uil uil-apps menu--icon"></i>
                         <span class="menu--label">All Courses</span>
                     </a>
