--- a/src/app/pages/user/user-view-course/user-view-course.component.html
+++ b/src/app/pages/user/user-view-course/user-view-course.component.html
@@ -1536,7 +1536,7 @@
             </div>
         </div>
     </div>
-    <app-user-footer></app-user-footer>
+    <!-- <app-user-footer></app-user-footer> -->
   
 <!-- </div> -->
 <!-- Body End -->
